# egui-data-table

./: .gitignore  .output.txt  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json
correlate/: Cargo.toml
correlate-web/: Cargo.toml
correlate/src/: __partially_editable.rs  application_command.rs  codec.rs  columns.rs  correlate.rs  data.rs  demo.rs  internationalization.rs  main.rs  view.rs
correlate/src/data/: cell_value.rs  cell_value_configuration.rs  column_config.rs  column_configuration.rs  column_type.rs  column_type_editor.rs  columns.rs  config.rs  configuration.rs  csv.rs  csv_sheet.rs  data_sheet.rs  data_sheet_configuration.rs  data_source.rs  data_source_configuration.rs  data_source_csv.rs  data_source_excel.rs  data_source_hierarchy.rs  excel.rs  excel_sheet.rs  gender.rs  grade.rs  mod.rs  project.rs  project_configuration.rs  project_hierarchy.rs  random.rs  relation.rs  renaming.rs  renaming_target.rs  row.rs  sort_configuration.rs  source_config.rs  types.rs  value_mapping.rs
correlate/src/data/editors/: bool.rs  column_type_editor.rs  date_time.rs  mod.rs  multi_select.rs  number.rs  relation.rs  select.rs  text.rs
correlate/src/egui_data_table/: draw.rs  mod.rs  renderer.rs  viewer.rs
correlate/src/egui_data_table/draw/: clipboard.rs  command.rs  cursor_state.rs  persist_data.rs  state.rs  tsv.rs  ui_state.rs
correlate/src/view/: add_existing_data_source.rs  add_project.rs  bottom_panel.rs  central_panel.rs  central_panel_view_model.rs  clear_user_modification_flag.rs  column_header.rs  data_sources.rs  hierarchy.rs  hierarchy_view_model.rs  menu_bar.rs  mod.rs  root_view.rs  root_view_model.rs  row_view.rs  row_viewer.rs  show_trash_confirmation_modal.rs  switch_to_source.rs  toggle_scrollbar_visibility.rs  trash_column.rs  trash_data_source.rs  trash_project.rs
correlate/src/view/app/: bottom_panel.rs  central_panel.rs  central_panel_header_menu.rs  central_panel_row_context_menu.rs  data_sources.rs  hierarchy_panel.rs  hierarchy_panel_context_menu.rs  menu_bar.rs  mod.rs  types.rs
correlate/test/data/cities/: de.csv  de.xlsx  de.xlsx.correlate  nl.csv  nl.json  nl.xlsx  nl.xlsx.correlate
correlate/test/data/sheets/: test-multiple-sheets.xlsx.correlate  test.xls  test.xlsx.correlate
correlate/test/data/students/: student-dataset.csv.correlate
examples/: demo.rs
libs/egui-data-table/: Cargo.toml
libs/egui-data-table/src/: draw.rs  lib.rs  viewer.rs
libs/egui-data-table/src/draw/: state.rs
