[workspace.package]
version = "0.1.1"
repository = "etalii.net"
edition = "2024"
authors = ["Peter Vrenken"]
description = "A generic way to correlate and analyse complex data structures"
categories = ["analysis", ]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["correlate","correlate-web"]
resolver = "3"

[workspace.dependencies]
egui =                      { version = "0.33.3" }
egui_extras =               { version = "0.33.3", default-features = false }
egui-data-table =           { path = "libs/egui-data-table" }
egui_material_icons =       { version = "0.5.0"}
eframe =                    { version = "0.33.3"}
fastrand =                  { version = "2.3.0" }
tap =                       { version = "1.0.1" }
itertools =                 { version = "0.14.0" }
serde =                     { version = "1.0.228", features = ["derive"] }
serde_json =                { version = "1.0.149" }
thiserror =                 { version = "2.0.18" }
log =                       { version = "0.4.29" }
env_logger =                { version = "0.11.9" }
getrandom =                 { version = "0.4.1" }
names =                     { version = "0.14.0", default-features = false }

wasm-bindgen-futures =      { version = "0.4.58" }
web-sys =                   { version = "0.3.85" }

umya-spreadsheet =          { version = "2.3.3" }
rfd =                       { version = "0.17.2" }
csv =                       { version = "1.4.0" }


