[package]
name = "correlate-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "correlate-web"
path = "../correlate/src/main.rs"

[dependencies]
egui =                  { workspace = true }
egui_extras =           { workspace = true, default-features = false, features = [ "serde" ] }
egui_material_icons =   { workspace = true }

eframe =                { workspace = true, features = ["serde", "persistence"] }
egui-data-table =       { workspace = true }
env_logger =            { workspace = true }
fastrand =              { workspace = true }
names =                 { workspace = true }
tap =                   { workspace = true }
log =                   { workspace = true }
getrandom =             { workspace = true, features = ["wasm_js"] }
umya-spreadsheet =      { workspace = true, features = ["js"] }

serde =                 { workspace = true, optional = true, features = ["derive"] }
serde_json =            { workspace = true }
csv =                   { workspace = true }
rfd =                   { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures =  { workspace = true }
web-sys =               { workspace = true }

