[package]
name = "correlate-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "correlate-web"
path = "../correlate/src/main.rs"

[dependencies]
egui =                  { workspace = true }
egui_extras =           { workspace = true, default-features = false, features = [ "serde" ] }
egui_material_icons =   { workspace = true }

eframe =                { workspace = true, features = ["serde", "persistence"] }
env_logger =            { workspace = true }
fastrand =              { workspace = true }
names =                 { workspace = true, optional = true }
tap =                   { workspace = true }
log =                   { workspace = true }
getrandom =             { workspace = true, features = ["wasm_js"] }
umya-spreadsheet =      { workspace = true, features = ["js"] }

serde =                 { workspace = true, features = ["derive"], optional = true }
serde_json =            { workspace = true }
csv =                   { workspace = true }
rfd =                   { workspace = true }
itertools =             { workspace = true }
thiserror =             { workspace = true }

[features]
default = ["persistency"]
persistency = ["dep:serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures =  { workspace = true }
web-sys =               { workspace = true }

