[package]
name = "correlate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "correlate"
path = "src/demo.rs"

[dependencies]
egui =                  { workspace = true }
egui-data-table =       { workspace = true }
egui_material_icons =   { workspace = true }
egui_extras =           { workspace = true, default-features = false, features = [ "serde" ] }
eframe =                { workspace = true, features = ["serde", "persistence"] }
env_logger =            { workspace = true }
getrandom =             { workspace = true, features = ["wasm_js"] }
fastrand =              { workspace = true }
names =                 { workspace = true }

tap =                   { workspace = true }
log =                   { workspace = true }
serde =                 { workspace = true, optional = true, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures =  { version = "0.4" }
web-sys =               { version = "0.3" }

[features]
default = ["persistency"]
persistency = ["dep:serde"]