[package]
name = "correlate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "correlate"
path = "src/main.rs"

[dependencies]
egui =                  { workspace = true }
egui-data-table =       { workspace = true }
egui_material_icons =   { workspace = true }
egui_extras =           { workspace = true, features = [ "serde" ] }
eframe =                { workspace = true, features = ["serde", "persistence"] }
env_logger =            { workspace = true }
getrandom =             { workspace = true, features = ["wasm_js"] }
fastrand =              { workspace = true }
names =                 { workspace = true }

tap =                   { workspace = true }
log =                   { workspace = true }
serde =                 { workspace = true, optional = true, features = ["derive"] }
serde_json =            { workspace = true }
umya-spreadsheet =      { workspace = true }
rfd =                   { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures =  { version = "0.4" }
web-sys =               { version = "0.3" }

[features]
default = ["persistency"]
persistency = ["dep:serde"]

[dev-dependencies]
eframe =                    { workspace = true, features = ["serde", "persistence"] }
fastrand =                  { workspace = true }
names =                     { workspace = true }
log =                       { workspace = true }
env_logger =                { workspace = true }
